packages/cjs-to-esm/test/snapshots/package-corpus/core-js/stable/error/index.js
import parent from "../../es/error";
const _cjs_default = parent;
export default _cjs_default;
